--- a/html/alldepfaces.html
+++ b/html/alldepfaces.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="All Spax DEP Face Sprites">
+    <meta property="og:title" content="All DEP Face Sprites">
     <meta property="og:description" content="A collection of all of the face sprites used in Dweller's Empty Path!.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
@@ -15,6 +15,10 @@
     <title>All DEP Face Sprites</title>
   </head>
   <body>
+    <!-- the regex that made this possible:
+    article\[who=(.+?)\](?:\[emotion=(.+?)\])?::before \{\n.*\n\}
+    <article who="$1" emotion="$2">\n$1<br>$2\n</article>
+    -->
     <!-- aimottle -->
     <article who="aimottle" emotion="angry">
       Aimottle<br>Angry
