--- a/html/alldepfaces.html
+++ b/html/alldepfaces.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="All DEP Face Sprites">
-    <meta property="og:description" content="A collection of all of the face sprites used in Dweller's Empty Path!.">
+    <meta property="og:description" content="A collection of all of the face sprites used in Dweller's Empty Path!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
