--- a/404.html
+++ b/404.html
@@ -10,48 +10,24 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/claire/Dizzy.png" type="image/png">
     <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="https://spax.zone/css/bootstrap.min.css">
-    <script src="https://spax.zone/js/bootstrap.min.js"></script>
-    <!---->
-    <link rel="stylesheet" href="https://spax.zone/css/styles.css">
-    <title>404 NOT FOUND LOL!</title>
+    <link rel="stylesheet" href="https://spax.zone/css/experimental.css">
+    <title>404 NOT FOUND</title>
   </head>
   <body>
-    <div id="bg">
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/claire/Look.png
-            "></img>
-          Oops! It looks like that page doesn't exist! 
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/claire/Sad.png
-            "></img>
-          I'm incredibly sorry to tell you that (jk no I'm not)
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/claire/Sigh.png
-            "></img>
-          Anyways, Spax told me to direct you to his <a href=https://spax.zone/html/main>main page</a>.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/claire/Neutral.png
-            "></img>
-          See you around?
-        </div>
-      </div>
-    </div>
-    <script src="/js/scrollparallax.js"></script>
+    <article who="claire" emotion="look">
+      Oops! It looks like that page doesn't exist!
+    </article>
+    <article who="claire" emotion="sad">
+      I'm incredibly sorry to tell you that.
+    </article>
+    <article who="claire" emotion="neutral">
+      (Just kidding no I'm not).
+    </article>
+    <article who="claire" emotion="sigh">
+      Anyways, Spax told me to direct you to his <a href=https://spax.zone/html/main>main page</a>.
+    </article>
+    <article who="claire" emotion="neutral">
+      See you around?
+    </article>
   </body>
 </html>
