--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -10,121 +10,87 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/bootstrap.min.js"></script>
-    <!---->
-    <link rel="stylesheet" href="/css/styles.css" type=text/css>
+    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
     <link rel="canonical" href="https://spax.zone/html/isspaxatschool"/>
     <title>Is Spax At School?</title>
+    <style>
+      .dnd-gray {
+        color: #737e8c;
+      }
+      .dnd-green {
+        color: #3ba55d;
+      }
+      .dnd-red {
+        color: #ed4245;
+      }
+      .dnd-yellow {
+        color: #faa81a;
+      }
+    </style>
   </head>
   <body>
-    <div id="bg">
-      <!--
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Yo. Spax here. The javascript I wrote for this website doesn't work at the moment, so I'll be updating this manually until I fix it.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Blush.png
-            "></img>
-          Currently I'm TOO LAZY TO EDIT THIS EVERY FUCKING TIME I TRANSITION.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Look.png
-            "></img>
-          Yea... no... this page is not gonna be useful until I actually fix the javascript.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          But for now, I'll leave you with a (working) clock configured to my timezone.
-        </div>
-      </div>
-      -->
-      <div class="text-box flex-container unselectable" style="text-align: center;">
-        <div id="timeBox">
-          This text should be replaced by the js. If you're seeing this, it means that I AM GOING TO FIRE MYSELF
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div id="dateBox">
-          This text should be replaced by the js. If you're seeing this too, it means that I AM GOING TO FIRE MYSELF AGAIN
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div id="dateBackup">
-          Schedule on weekdays:<br>
-          12:00am-6:15am = <span class="dnd-gray">Sleeping</span><br>
-          6:37am-7:29am = <span class="dnd-green">Going to (or already at) school
-          </span><br>
-          7:30am-10:47am = <span class="dnd-red">In school
-          </span><br>
-          10:48am-11:16am = <span class="dnd-green">Eating lunch
-          </span><br>
-          11:17am-2:24pm = <span class="dnd-red">In school
-          </span><br>
-          2:25pm-2:59pm = <span class="dnd-green">Going home
-          </span><br>
-          3:00pm+ = <span class="dnd-yellow">Working on homework and other activities
-          </span><br>
-          <br>Key:<br>
-          <span class="dnd-green">Green</span> = Online (normally active on discord)
-          <br>
-          <span class="dnd-red">Red</span> = In school (relatively active on discord but with VERY bad cell service)
-          <br>
-          <span class="dnd-yellow">Yellow</span> = Out of school but possibly working on other stuff
-          <br>
-          <span class="dnd-gray">Gray</span> = Most likely sleeping
-          <br>
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-          (<a href="main">Click here</a> to go back to the main page!)
-        </div>
-      </div>
+    <!--
+    <article who="spax" emotion="smirk">
+      Yo. Spax here. The javascript I wrote for this website doesn't work at the moment, so I'll be updating this manually until I fix it.
+    </article>
+    <article who="spax" emotion="blush">
+      Currently I'm TOO LAZY TO EDIT THIS EVERY FUCKING TIME I TRANSITION.
+    </article>
+    <article who="spax" emotion="look">
+      Yea... no... this page is not gonna be useful until I actually fix the javascript.
+    </article>
+    <article who="spax" emotion="smirk">
+      But for now, I'll leave you with a (working) clock configured to my timezone.
+    </article>
+    -->
+    <article style="text-align: center;" id="timeBox">
+      This text should be replaced by the js. If you're seeing this, it means that I AM GOING TO FIRE MYSELF
+    </article>
+    <article who="spax" emotion="smirk" id="dateBox">
+      This text should be replaced by the js. If you're seeing this too, it means that I AM GOING TO FIRE MYSELF AGAIN
+    </article>
+    <article id="dateBackup">
+      Schedule on weekdays:<br>
+      12:00am-6:15am = <span class="dnd-gray">Sleeping</span><br>
+      6:30am-7:29am = <span class="dnd-green">Going to (or already at) school
+      </span><br>
+      7:30am-10:44am = <span class="dnd-red">In school
+      </span><br>
+      10:45am-11:14am = <span class="dnd-green">Eating lunch
+      </span><br>
+      11:15am-2:29pm = <span class="dnd-red">In school
+      </span><br>
+      2:30pm-2:59pm = <span class="dnd-green">Going home
+      </span><br>
+      3:00pm+ = <span class="dnd-yellow">Working on homework and other activities
+      </span><br>
+      <br>Key:<br>
+      <span class="dnd-green">Green</span> = Online (normally active on discord)
+      <br>
+      <span class="dnd-red">Red</span> = In school (relatively active on discord but with VERY bad cell service)
+      <br>
+      <span class="dnd-yellow">Yellow</span> = Out of school but possibly working on other stuff
+      <br>
+      <span class="dnd-gray">Gray</span> = Most likely sleeping
+      <br>
+    </article>
+    <article>
+      (<a href="main">Click here</a> to go back to the main page!)
+    </article>
+    <!--
+    <article style="color:red;">
+      Current status: Broken.<br>
+      -Spax
+    </article>
+    <article who="spax" emotion="worried" id="date">
+      This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
     </div>
-    <!--<div class="text-box flex-container unselectable">
-      <div style="color:red;">
-        Current status: Broken.<br>
-        -Spax
-      </div>
-    </div>
-    <div class="text-box flex-container unselectable">
-      <div id="date">
-          <img src="
-        images/faces/spax/Worried.png
-          "></img>
-        This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
-      </div>
-    </div>
-    <div class="text-box flex-container unselectable">
-      <div>
-        (And <a href="main">click here</a> to go back to the main page!)
-      </div>
-    </div>
-    <div class="text-box flex-container unselectable">
-      <div id="debug">
-      </div>
-    </div>-->
-    <!--<div class="text-box flex-container unselectable">
-      <div id="debug2">
-      </div>
-    </div>-->
+    <article>
+      (And <a href="main">click here</a> to go back to the main page!)
+    </article>
+    <article id="debug"></article>
+    <article id="debug2"></article>
+    -->
     <script src="/js/isspaxatschool.js" type=text/javascript></script>
-    <script src="/js/scrollparallax.js" type=text/javascript></script>
   </body>
 </html>
