insane refactor with the new experimental css

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -1,280 +1,135 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html manifest="manifest" lang="en-US">
   <head>
     <meta charset="utf-8">
+    <title>All DEP Dialogue</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;.">
     <meta property="og:title" content="All DEP Dialogue">
     <meta property="og:description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/yoki/Neutral.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/textbox.js"></script>
-    <!---->
-    <link rel="stylesheet" href="/css/styles.css" type=text/css>
+    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
     <link rel="canonical" href="https://spax.zone/html/DEPalldialogue"/>
-    <title>All DEP Dialogue</title>
   </head>
   <body>
-    <div id="bg">
-      <!--
-      <tb name="spax" face="smirk">
+      <!--dreams really do come true-->
+      <article who="spax" emotion="smirk">
         Yo! It's me! Spax!
-      </tb>
-      -->
-      <!--I want that to do the equivalent of:  -->
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Yo! It's me! Spax!
-        </div>
-      </div>
-      <!-- ^ this ^ -->
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Neutral.png
-            "></img>
-          I've been in the DEP server for over a year and a half now, and I've been wanting to give back to the community for quite awhile now.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Woo.png
-            "></img>
+      </article>
+      <article who="spax" emotion="neutral">
+        I've been in the DEP server for over a year and a half now, and I've been wanting to give back to the community for quite awhile now.
+      </article>
+      <article who="spax" emotion="woo">
         So now I'm making a webpage that hosts all of DEP's dialogue as seen in-game!
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Look.png
-            "></img>
-          This is still currently a work in progress, and it's going to take a lengthy amount of time to port the dialogue over 100%.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          But at least I'm doing <i>something</i> for it. Think of it as a passion project for me!
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Look.png
-            "></img>
-          (Much like how I made a .ttf file of DEP's font too a few weeks ago.)
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Blush.png
-            "></img>
-          Well, I hope you enjoy!
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/aimottle/Unsure.png
-            "></img>
-          Spax is still working on the site... come back here later when it updates.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-          Index:<br>
-          <!--
-          <a href="#"></a>
-          -->
-          <a href="#intro-text">Intro</a>
-        </div>
-      </div>
-      <div class="title-text-box title-flex-container">
-        <div id="intro-text">
-          Intro
-        </div>
-      </div>
-      <div class="desc-text-box desc-flex-container">
-        <div>
-          After the player starts the game, the screen becomes dark green and nightmare.ogg starts playing. Text appears.
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-          ......................
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-          ........My head.....
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-          .............It hurts..........
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-          All of these voices..and...<br>
-          All of these faces are flooding into my head...... 
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-          Who.... are they...?
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-          Ah...................... 
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-          It feels like....<br>
-          My head’s gonna burst open.......
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-          Someone.......<br>
-          Make it stop...........
-        </div>
-      </div>
-      <div class="desc-text-box desc-flex-container">
-        <div>
-          A large eye appears in front of the player, and disappears within a few seconds.<br>
-          It then fades into a view of a person in bed, suddenly waking up.
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Surprised.png
-            "></img>
-          .............!!!
-        </div>
-      </div>
-      <div class="desc-text-box desc-flex-container">
-        <div>
-          She blinks and sits up.
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Neutral.png
-            "></img>
-          ...............
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Disheartened.png
-            "></img>
-          ....Another nightmare..
-        </div>
-      </div>
-      <div class="desc-text-box desc-flex-container">
-        <div>
-          She then lies in bed again, staring at the ceiling.
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Disheartened.png
-            "></img>
-          I’ve been getting a lot of these lately....
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Disheartened.png
-            "></img>
-          ...
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Annoyed.png
-            "></img>
-          ..I have a feeling HE’s behind this one again.
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Annoyed.png
-            "></img>
-          ........
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Think.png
-            "></img>
-          I don’t think I can fall back asleep after THAT.
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Annoyed.png
-            "></img>
-          ...
-        </div>
-      </div>
-      <div class="desc-text-box desc-flex-container">
-        <div>
-          She starts getting out of bed.
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Look.png
-            "></img>
-          Well...<br>
-          No use laying around in bed.
-        </div>
-      </div>
-      <div class="desc-text-box desc-flex-container">
-        <div>
-          A portrait shot of the character pans up.
-        </div>
-      </div>
-      <div class="text-box flex-container">
-        <div>
-            <img src="
-          /images/faces/yoki/Neutral.png
-            "></img>
-          Guess I’ll go for a walk to clear my mind a bit.
-        </div>
-      </div>
-      <div class="desc-text-box desc-flex-container">
-        <div>
-          [End of Event]
-        </div>
-      </div>
-    </div>
-    <script src="/js/scrollparallax.js" type=text/javascript></script>
+      </article>
+      <article who="spax" emotion="look">
+        This is still currently a work in progress, and it's going to take a lengthy amount of time to port the dialogue over 100%.
+      </article>
+      <article who="spax" emotion="smirk">
+        But at least I'm doing <i>something</i> for it. Think of it as a passion project for me!
+      </article>
+      <article who="spax" emotion="look">
+        (Much like how I made a .ttf file of DEP's font too a few weeks ago.)
+      </article>
+      <article who="spax" emotion="blush">
+        Well, I hope you enjoy!
+      </article>
+      <article who="aimottle" emotion="unsure">
+        Spax is still working on the site... come back here later when it updates.
+      </article>
+      <article>
+        Index:<br>
+        <a href="#intro-text">Intro</a>
+      </article>
+      <article id="intro-text" type="title">
+        Intro
+      </article>
+      <article type="description">
+        After the player starts the game, the screen becomes dark green and nightmare.ogg starts playing. Text appears.
+      </article>
+      <article>
+        ......................
+      </article>
+      <article>
+        ........My head.....
+      </article>
+      <article>
+        .............It hurts..........
+      </article>
+      <article>
+        All of these voices..and...<br>
+        All of these faces are flooding into my head......
+      </article>
+      <article>
+        Who.... are they...?
+      </article>
+      <article>
+        Ah...................... 
+      </article>
+      <article>
+        It feels like....<br>
+        My head’s gonna burst open.......
+      </article>
+      <article>
+        Someone.......<br>
+        Make it stop...........
+      </article>
+      <article type="description">
+        A large eye appears in front of the player, and disappears within a few seconds.<br>
+        It then fades into a view of a person in bed, suddenly waking up.
+      </article>
+      <article who="yoki" emotion="surprised">
+        .............!!!
+      </article>
+      <article type="description">
+        She blinks and sits up.
+      </article>
+      <article who="yoki" emotion="neutral">
+        ...............
+      </article>
+      <article who="yoki" emotion="disheartened">
+        ....Another nightmare..
+      </article>
+      <article type="description">
+        She then lies in bed again, staring at the ceiling.
+      </article>
+      <article who="yoki" emotion="disheartened">
+        I’ve been getting a lot of these lately....
+      </article>
+      <article who="yoki" emotion="disheartened">
+        ...
+      </article>
+      <article who="yoki" emotion="annoyed">
+        ..I have a feeling HE’s behind this one again.
+      </article>
+      <article who="yoki" emotion="annoyed">
+        ........
+      </article>
+      <article who="yoki" emotion="think">
+        I don’t think I can fall back asleep after THAT.
+      </article>
+      <article who="yoki" emotion="annoyed">
+        ...
+      </article>
+      <article type="description">
+        She starts getting out of bed.
+      </article>
+      <article who="yoki" emotion="look">
+        Well...<br>
+        No use laying around in bed.
+      </article>
+      <article type="description">
+        A portrait shot of the character pans up.
+      </article>
+      <article who="yoki" emotion="neutral">
+        Guess I’ll go for a walk to clear my mind a bit.
+      </article>
+      <article type="description">
+        [End of Event]
+      </article>
   </body>
 </html>
