--- a/html/alldepfaces.html
+++ b/html/alldepfaces.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html manifest="manifest" lang="en-US">
   <head>
     <meta charset="utf-8">
+    <title>All DEP Face Sprites</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="A collection of all the face sprites used in Dweller's Empty Path!">
     <meta property="og:title" content="All DEP Face Sprites">
     <meta property="og:description" content="A collection of all the face sprites used in Dweller's Empty Path!">
     <meta property="og:type" content="website">
@@ -12,7 +14,6 @@
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <link rel="stylesheet" href="/css/experimental.css"/>
     <link rel="canonical" href="https://spax.zone/html/alldepfaces"/>
-    <title>All DEP Face Sprites</title>
   </head>
   <body>
     <!-- the regex that made this possible:
