--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -1,162 +1,71 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html manifest="manifest" lang="en-US">
   <head>
     <meta charset="utf-8">
+    <title>All of Spax's Face Sprites</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
     <meta property="og:title" content="All Spax DEP Face Sprites">
     <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/bootstrap.min.js"></script>
-    <!---->
-    <link rel="stylesheet" href="/css/styles.css" type=text/css>
+    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
     <link rel="canonical" href="https://spax.zone/html/allspaxfaces"/>
-    <title>All of Spax's Face Sprites</title>
   </head>
   <body>
-    <div id="bg">
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Blush.png
-            "></img>
-          Blush
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Confused.png
-            "></img>
-          Confused
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Disappointed.png
-            "></img>
-        Disappointed
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Dizzy.png
-            "></img>
-          Dizzy
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Enraged.png
-            "></img>
-          Enraged
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Happy.png
-            "></img>
-          Happy
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Look.png
-            "></img>
-          Look
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Neutral.png
-            "></img>
-          Neutral
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Pensive.png
-            "></img>
-          Pensive
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Sleep.png
-            "></img>
-          Sleep
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Smirk
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Surprised.png
-            "></img>
-          Surprised
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Sus.png
-            "></img>
-          Sus
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Sweat_Drop.png
-            "></img>
-          Sweat Drop
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Talk.png
-            "></img>
-          Talk
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Woo.png
-            "></img>
-          Woo!
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Worried.png
-            "></img>
-          Worried
-        </div>
-      </div>
-    </div>
-    <script src="/js/scrollparallax.js" type=text/javascript></script>
+    <article who="spax" emotion="blush">
+      Blush
+    </article>
+    <article who="spax" emotion="confused">
+      Confused
+    </article>
+    <article who="spax" emotion="disappointed">
+      Disappointed
+    </article>
+    <article who="spax" emotion="dizzy">
+      Dizzy
+    </article>
+    <article who="spax" emotion="enraged">
+      Enraged
+    </article>
+    <article who="spax" emotion="happy">
+      Happy
+    </article>
+    <article who="spax" emotion="look">
+      Look
+    </article>
+    <article who="spax" emotion="neutral">
+      Neutral
+    </article>
+    <article who="spax" emotion="pensive">
+      Pensive
+    </article>
+    <article who="spax" emotion="sleep">
+      Sleep
+    </article>
+    <article who="spax" emotion="smirk">
+      Smirk
+    </article>
+    <article who="spax" emotion="surprised">
+      Surprised
+    </article>
+    <article who="spax" emotion="sus">
+      Sus
+    </article>
+    <article who="spax" emotion="sweat-drop">
+      Sweat Drop
+    </article>
+    <article who="spax" emotion="talk">
+      Talk
+    </article>
+    <article who="spax" emotion="woo">
+      Woo!
+    </article>
+    <article who="spax" emotion="worried">
+      Worried
+    </article>
   </body>
 </html>
