--- a/html/fanart.html
+++ b/html/fanart.html
@@ -1,65 +1,41 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html manifest="manifest" lang="en-US">
   <head>
+    <meta charset="utf-8">
     <link rel="preload" href="/data/fanart.json" as="fetch" crossorigin="anonymous">
     
-    <meta charset="utf-8">
+    <title>Spax Fanart</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
+    <meta name="description" content="A collection of all official/fanworks of my characters &quot;Spax&quot; and &quot;Nahua&quot;.">
     <meta property="og:title" content="Spax Fanart">
     <meta property="og:description" content="A collection of all official/fanworks of my characters &quot;Spax&quot; and &quot;Nahua&quot;.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/bootstrap.min.js"></script>
-    <!---->
-    <link rel="stylesheet" href="/css/styles.css" type=text/css>
+    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
     <link rel="canonical" href="https://spax.zone/html/art"/>
-    <title>Spax Fanart</title>
   </head>
   <body>
-    <div id="bg">
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Yo! This page hosts all the fanart that you guys made of my characters!
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Look.png
-            "></img>
-          (And just art of my characters in general.)
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Here's the character information:<br>
-        The blue anthro axolotl gal is my work-in-progress OC, Nahua!<br>
-        And the small blue normal axolotl is Spax, a representation of me as a person on the internet.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Blush.png
-            "></img>
-          Well, I hope you enjoy the art!
-        </div>
-      </div>
-    </div>
-    <script src="/js/debugging.js"></script>
+    <article who="spax" emotion="smirk">
+      Yo! This page hosts all the fanart that you guys made of my characters!
+    </article>
+    <article who="spax" emotion="look">
+      (And just art of my characters in general.)
+    </article>
+    <article who="spax" emotion="smirk">
+      Here's the character information:<br>
+      The blue anthro axolotl gal is my work-in-progress OC, Nahua!<br>
+      And the small blue normal axolotl is Spax, a representation of me as a person on the internet.
+    </article>
+    <article who="spax" emotion="blush">
+      Well, I hope you enjoy the art!
+    </article>
+    <article who="spax" emotion="look">
+      Note: this page is severely out of date. A newer one will go up at some point.
+    </article>
     <script src="/js/fanart.js"></script>
-    <script src="/js/scrollparallax.js"></script>
   </body>
 </html>
