--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -1,70 +1,46 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html manifest="manifest" lang="en-US">
   <head>
     <meta charset="utf-8">
+    <title>Nahua &quot;Ref&quot; Sheet</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="A collection of refs for Nahua!">
     <meta property="og:title" content="Nahua &quot;Ref&quot; Sheet">
     <meta property="og:description" content="A collection of refs for Nahua!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/bootstrap.min.js"></script>
-    <!---->
-    <link rel="stylesheet" href="/css/styles.css" type=text/css>
+    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
     <link rel="canonical" href="https://spax.zone/html/nahua-ref-sheet"/>
-    <title>Nahua &quot;Ref&quot; Sheet</title>
   </head>
   <body>
-    <div id="bg">
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Hey! Here's my character &quot;Nahua&quot;!
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Look.png
-            "></img>
-          No real ref sheet yet...
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Until then, here are a collection of separate reference images:
-        </div>
-      </div>
-      <!--This is where fanart.js inserts stuff-->
-      <div class="text-box flex-container unselectable end-of-fanart">
-        <div>
-          Other notes not described on the ref images:<br>
-          1. Nahua is female. She goes by she/her pronouns, and is aromantic.<br>
-          2. Nahua is <u>FLAT</u>.<br>
-          3. If it wasn't obvious, she's an <a href="https://en.wikipedia.org/wiki/Axolotl">axolotl</a>.<br>
-          4. She's 19 years old.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable end-of-fanart">
-        <div>
-          Final clarifications:<br>
-          1. The finned part of her tail goes along her spine, as seen in the valentine's day image.<br>
-          2. She has four fingers, not three.<br>
-          3. She has a full head of hair. She isn't mostly bald like early art depicts her as.<br>
-          4. Yes, her gills (or <a href="https://en.wikipedia.org/wiki/External_gills">rami</a>) are stylized like that.<br>
-          5. Her headphones are optional? I guess? She'll just look weird without them.
-        </div>
-      </div>
+    <article who="spax" emotion="smirk">
+      Hey! Here's my character &quot;Nahua&quot;!
+    </article>
+    <article who="spax" emotion="look">
+      No real ref sheet yet...
+    </article>
+    <article who="spax" emotion="smirk">
+      Until then, here are a collection of separate reference images:
+    </article>
+    <!--This is where fanart.js inserts stuff-->
+    <article class="end-of-fanart">
+      Other notes not described on the ref images:<br>
+      1. Nahua is female. She goes by she/her pronouns, and is aromantic.<br>
+      2. Nahua is <u>FLAT</u>.<br>
+      3. If it wasn't obvious, she's an <a href="https://en.wikipedia.org/wiki/Axolotl">axolotl</a>.<br>
+      4. She's 19 years old.
+    </article>
+    <article class="end-of-fanart">
+      Final clarifications:<br>
+      1. The finned part of her tail goes along her spine, as seen in the valentine's day image.<br>
+      2. She has four fingers, not three.<br>
+      3. She has a full head of hair. She isn't mostly bald like early art depicts her as.<br>
+      4. Yes, her gills (or <a href="https://en.wikipedia.org/wiki/External_gills">rami</a>) are stylized like that.<br>
+      5. Her headphones are optional? I guess? She'll just look weird without them.
+    </article>
     <script src="/js/fanart.js"></script>
-    <script src="/js/scrollparallax.js" type=text/javascript></script>
   </body>
 </html>
