--- a/html/spaxDay2.html
+++ b/html/spaxDay2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html manifest="manifest" lang="en-US">
   <head>
     <meta name="theme-color" content="#306850">
     <!--written entirely by calmbubbles-->
@@ -13,8 +13,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
+    <meta name="description" content="Happy Birthday Spax 2">
     <meta property="og:title" content="Spax's Site">
-    <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
+    <meta property="og:description" content="Happy Birthday Spax 2">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
