--- a/redirects/imsorry.html
+++ b/redirects/imsorry.html
@@ -6,26 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="https://spax.zone/css/bootstrap.min.css">
-    <script src="https://spax.zone/js/bootstrap.min.js"></script>
-    <!---->
     <link rel="stylesheet" href="https://spax.zone/css/styles.css" type=text/css>
     <link rel="canonical" href="imsorry"/>
     <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/watch?v=dQw4w9WgXcQ'"/>
     <title>Redirect Go brrrrr</title>
   </head>
   <body>
-    <div id="bg">
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/claire/Neutral.png
-            "></img>
-          Redircting nerds...
-        </div>
-      </div>
-    </div>
-    <script src="/js/scrollparallax.js"></script>
+    <article who="claire" emotion="neutral">
+      Redircting nerds...
+    </article>
   </body>
 </html>
