--- a/discord.html
+++ b/discord.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html style="background-color: black;">
-    <head>
-        <title>teleporting to spax discord</title>
-        <meta http-equiv="refresh" content="0;url=https://discord.gg/nsKxQvBY8P" />
-    </head>
-    <body>
-    </body>
+  <head>
+    <title>teleporting to spax discord</title>
+    <meta http-equiv="refresh" content="0;url=https://discord.gg/nsKxQvBY8P"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
+    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
+  </head>
+  <body>
+    <article who="claire" emotion="neutral">
+      Redircting nerds...
+    </article>
+  </body>
 </html>
