--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html manifest="manifest" lang="en-US">
   <head>
     <meta charset="utf-8">
+    <title>Is Spax At School?</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="See if I'm currently at school or not!">
     <meta property="og:title" content="Is Spax Currently At School?">
     <meta property="og:description" content="See if I'm currently at school or not!">
     <meta property="og:type" content="website">
@@ -12,7 +14,6 @@
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <link rel="stylesheet" href="/css/experimental.css" type=text/css>
     <link rel="canonical" href="https://spax.zone/html/isspaxatschool"/>
-    <title>Is Spax At School?</title>
     <style>
       .dnd-gray {
         color: #737e8c;
