--- a/html/main2.html
+++ b/html/main2.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html manifest="manifest" lang="en-US">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
+    <meta name="description" content="a webbed site for a webbed creachure">
     <meta property="og:title" content="spax.zone">
     <meta property="og:description" content="a webbed site for a webbed creachure">
     <meta property="og:type" content="website">
