--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -1,232 +1,101 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html manifest="manifest" lang="en-US">
   <head>
     <meta charset="utf-8">
+    <title>Planned Changes</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="All of the changes that I'm planning on making for the website soon!">
     <meta property="og:title" content="All Spax DEP Face Sprites">
     <meta property="og:description" content="All of the changes that I'm planning on making for the website soon!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/bootstrap.min.js"></script>
-    <!---->
-    <link rel="stylesheet" href="/css/styles.css" type=text/css>
+    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
     <link rel="canonical" href="https://spax.zone/html/plannedchanges"/>
-    <title>All of Spax's Face Sprites</title>
   </head>
   <body>
-    <div id="bg">
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Yo! It's me, Spax.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Happy.png
-            "></img>
-          This is my kinda publicly viewable list for what I want to change on the site.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Neutral.png
-            "></img>
-          I'm still relatively new to web development and design, so a lot of things that I want to put on here I still have no clue how to do.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Look.png
-            "></img>
-          I mean, even these text boxes! It took almost a week to get them to how they look now! And only with a shit ton of help from someone named Mathew on Discord!
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Worried.png
-            "></img>
-          (This site would be less than half of what it is now if he didn't help me out at all. I thank him massively.)
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Neutral.png
-            "></img>
-          But yea I guess now I'll talk about things that I'm currently working on or planning on working on for this site. 
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          First, I want to make a real front page. Not like the test/placeholder one I have up at the current moment. I'll move that to a different url like test or something like that.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Then I want to put actual relevant stuff on the page. Things like my youtube, my modfiles for <a href="https://noti.tg">NotITG</a>, and a few things about my personality, along with relevant links like that <a href="isspaxatschool">school schedule site thing</a>. Speaking of which...
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Look.png
-            "></img>
-          <s>I need to fix the Javascript on that page. It currently only works on the weekends. There's some sort of bug in either the way that I've formatted the code or just the code in general. Might have to use a slightly more reliable system for that... but that's for future me to deal with!</s><br>
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Blush.png
-            "></img>
-          <s>UPDATE: I FUCKING FIXED IT LET'S GOOOOOOOO! Gonna be talking about this in a sec but I'll add a sprite that encapsulates the "LET'S FUCKING GOOOO" mood much better than :blush: does at the moment.</s>
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Pensive.png
-            "></img>
-          (Nevermind it broke again.)
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Happy.png
-            "></img>
-          I also wanna add backgrounds to all of the pages. Change it from the boring and flat green that it is right now to possibly a repeating image that looks nice. I already have one in mind but I have to edit it a little more for it to look okay.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Dizzy.png
-            "></img>
-          (I also gotta learn how to even get it to show up properly on the site.)
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Another thing I wanna do is add more Spax faces to the existing 14. I'll try to include more emotions and stuff. I already got a few in mind.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Worried.png
-            "></img>
-          One of the last things I wanna do is to register a domain name for the site, so that it isn't specifically "github.io". But that also requires money... and I don't have that...
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Pensive.png
-            "></img>
-          Alas, so many things to do...
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Surprised.png
-            "></img>
-          Oh! And one more thing!
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Worried.png
-            "></img>
-          <s>This doesn't directly have to do with the site but I want to make a .ttf font from the DEP gamefont. Right now I'm using a font that looks extremely similar to the original font, but if you were to zoom in on some of the characters, you'll see some weird curves and things (especially on the 0-9 numbers).</s>
-        </div>
-      </div>
-
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          <s>I'm planning on vectorizing all of the characters from the original spritesheet, and then figuring out how to make that into a font.</s>
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Happy.png
-            "></img>
-          <s>And then I'll release it! Woo!</s>
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Blush.png
-            "></img>
-          UPDATE: WOOO FINISHED THE FONT! Linked correctly in the page and working as intended!
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Look.png
-            "></img>
-          Yea jeez I have a lot of ideas... and I'm just a small internet user who wants to impact the world in a meaningful way...
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Pensive.png
-            "></img>
-          Aughh, I hope I can do something cool with this site. 
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Neutral.png
-            "></img>
-          Anyways, thank you for taking the time to read about my silly big ideas for this webpage. I'll update this site like every week or so, and I'll put the outdated ones into a folder on the <a href="https://github.com/SpiritAxolotl/spax.zone">github repo</a>, so you can see the history there. 
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Happy.png
-            "></img>
-          Cya! 
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-          (<a href="/html/main">Click here</a> to go back to the main page!)
-        </div>
-      </div>
-    </div>
-    <script src="/js/scrollparallax.js" type=text/javascript></script>
+    <article>
+      Originally written February 8th 2022.
+    </article>
+    <article who="spax" emotion="smirk">
+      Yo! It's me, Spax.
+    </article>
+    <article who="spax" emotion="happy">
+      This is my kinda publicly viewable list for what I want to change on the site.
+    </article>
+    <article who="spax" emotion="neutral">
+      I'm still relatively new to web development and design, so a lot of things that I want to put on here I still have no clue how to do.
+    </article>
+    <article who="spax" emotion="look">
+      I mean, even these text boxes! It took almost a week to get them to how they look now! And only with a shit ton of help from someone named Mathew on Discord!
+    </article>
+    <article who="spax" emotion="worried">
+      (This site would be less than half of what it is now if he didn't help me out at all. I thank him massively.)
+    </article>
+    <article who="spax" emotion="neutral">
+      But yea I guess now I'll talk about things that I'm currently working on or planning on working on for this site. 
+    </article>
+    <article who="spax" emotion="smirk">
+      First, I want to make a real front page. Not like the test/placeholder one I have up at the current moment. I'll move that to a different url like test or something like that.
+    </article>
+    <article who="spax" emotion="smirk">
+      Then I want to put actual relevant stuff on the page. Things like my youtube, my modfiles for <a href="https://noti.tg">NotITG</a>, and a few things about my personality, along with relevant links like that <a href="isspaxatschool">school schedule site thing</a>. Speaking of which...
+    </article>
+    <article who="spax" emotion="look">
+      I need to fix the Javascript on that page. It currently only works on the weekends. There's some sort of bug in either the way that I've formatted the code or just the code in general. Might have to use a slightly more reliable system for that... but that's for future me to deal with!<br>
+    </article>
+    <article who="spax" emotion="blush">
+      UPDATE: I FUCKING FIXED IT LET'S GOOOOOOOO! Gonna be talking about this in a sec but I'll add a sprite that encapsulates the "LET'S FUCKING GOOOO" mood much better than :blush: does at the moment.
+    </article>
+    <article who="spax" emotion="pensive">
+      (Nevermind it broke again.)
+    </article>
+    <article who="spax" emotion="happy">
+      I also wanna add backgrounds to all of the pages. Change it from the boring and flat green that it is right now to possibly a repeating image that looks nice. I already have one in mind but I have to edit it a little more for it to look okay.
+    </article>
+    <article who="spax" emotion="dizzy">
+      (I also gotta learn how to even get it to show up properly on the site.)
+    </article>
+    <article who="spax" emotion="smirk">
+      Another thing I wanna do is add more Spax faces to the existing 14. I'll try to include more emotions and stuff. I already got a few in mind.
+    </article>
+    <article who="spax" emotion="worried">
+      One of the last things I wanna do is to register a domain name for the site, so that it isn't specifically "github.io". But that also requires money... and I don't have that...
+    </article>
+    <article who="spax" emotion="pensive">
+      Alas, so many things to do...
+    </article>
+    <article who="spax" emotion="surprised">
+      Oh! And one more thing!
+    </article>
+    <article who="spax" emotion="worried">
+      This doesn't directly have to do with the site but I want to make a .ttf font from the DEP gamefont. Right now I'm using a font that looks extremely similar to the original font, but if you were to zoom in on some of the characters, you'll see some weird curves and things (especially on the 0-9 numbers).
+    </article>
+    <article who="spax" emotion="smirk">
+      I'm planning on vectorizing all of the characters from the original spritesheet, and then figuring out how to make that into a font.
+    </article>
+    <article who="spax" emotion="happy">
+      And then I'll release it! Woo!
+    </article>
+    <article who="spax" emotion="blush">
+      UPDATE: WOOO FINISHED THE FONT! Linked correctly in the page and working as intended!
+    </article>
+    <article who="spax" emotion="look">
+      Yea jeez I have a lot of ideas... and I'm just a small internet user who wants to impact the world in a meaningful way...
+    </article>
+    <article who="spax" emotion="pensive">
+      Aughh, I hope I can do something cool with this site. 
+    </article>
+    <article who="spax" emotion="neutral">
+      Anyways, thank you for taking the time to read about my silly big ideas for this webpage. I'll update this site like every week or so, and I'll put the outdated ones into a folder on the <a href="https://github.com/SpiritAxolotl/spax.zone">github repo</a>, so you can see the history there. 
+    </article>
+    <article who="spax" emotion="happy">
+      Cya!
+    </article>
+    <article>
+      (<a href="/html/main">Click here</a> to go back to the main page!)
+    </article>
   </body>
 </html>
