--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -1,139 +1,88 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html manifest="manifest" lang="en-US">
   <head>
     <meta charset="utf-8">
+    <title>Spax's Site List</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube, site list">
+    <meta name="description" content="A place that links every public page currently on my website!">
     <meta property="og:title" content="Spax's Site List">
     <meta property="og:description" content="A place that links every public page currently on my website!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/bootstrap.min.js"></script>
-    <!---->
-    <link rel="stylesheet" href="/css/styles.css" type=text/css>
+    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
     <link rel="canonical" href="https://spax.zone/html/sitelist"/>
-    <title>Spax's Site List</title>
   </head>
   <body>
-    <div id="bg">
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          Yo! It's me, Spax!<br>
-          This is my full site list.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Look.png
-            "></img>
-          I'll try to keep this page as up-to-date as possible... but don't expect me to be perfect.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Smirk.png
-            "></img>
-          (2024 Update: I removed a lot of the links to certain pages here for being severely out of date)
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-          <img src="
-        /images/faces/spax/Blush.png
-          "></img>
-        I hope you enjoy my webpages!
-        </div>
-      </div>
-      <br>
-      <!--<div class="text-box flex-container unselectable">
-        <div>
-        <a href=iwanttodie>I want to die</a><br>
-        <span style="color:red;">A page that talks about my constant suffering being alive. I'm sorry.</span>
-        </div>
-      </div>-->
-      <div class="text-box flex-container unselectable">
-        <div>
-        <a href=main>Main Page</a><br>
-        The main page to the website. Right now it's a test placeholder but I'll put useful stuff on here eventually.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-        <a href=fanart>Character Art!</a><br>
-        This is where I post all art of my characters! Please check out the cool artists who made them!<br>Sidenote: this page needs to get overhauled. It is severely out of date.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-        <a href=nahua-ref-sheet>Nahua Ref Sheet</a><br>
-        The ref sheet of Nahua! Since I don't have an official ref sheet yet, I've picked a few of the most up-to-date pieces of her to display here.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-        <a href=isspaxatschool>Is Spax At School?</a><br>
-        This page uses JavaScript to see my schedule and update the text box to state whether I'm currently at school or not. Finally works!
-        </div>
-      </div>
-      <!--<div class="text-box flex-container unselectable">
-        <div>
-        <a href=changelog>Changelog</a><br>
-        The manually edited changelog for the site. Currently being updated every day I make major changes on the site so that I don't regret not documenting it in the future. (I really need to update this.)
-        </div>
-      </div>-->
-      <div class="text-box flex-container unselectable">
-        <div>
-        <a href=allspaxfaces>All Spax Faces</a><br>
-        When originally making this site and testing the text box functionality, I went a little too far with a gag and ended up making 14 sprites for my axolotl character. I only ended up using two of them but in this site, you can see all the expressions I made for them! (I spent like two hours on them) <s>(dm me on discord if you wanna redo them for me)</s>
-        </div>
-      </div>
-      <!--<div class="text-box flex-container unselectable">
-        <div>
-        <a href=plannedchanges>Planned Changes</a><br>
-        Here I'll try to do weekly updates stating what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. (I really need to update this too.)
-        </div>
-      </div>-->
-      <div class="text-box flex-container unselectable">
-        <div>
-        <a href=MojoArrowAdvice>Mojo's Arrow Advice</a><br>
-        This is my Create project that I made for my AP Computer Science Principles class! This program is not endorsed by BrotherMojo at all by the way. 
-        </div>
-      </div>
-      <!--<div class="text-box flex-container unselectable">
-        <div>
-        <a href=mrc3timezones>Mods Rush Couples 3 Team Timezones</a><br>
-        I collabed with two other people for a Mods Rush in NotITG, and I made this site so that everyone on the team could see each other's times easier!
-        </div>
-      </div>-->
-      <!--<div class="text-box flex-container unselectable">
-        <div>
-        <a href=rangalshutthehellup>Shut the HELL up Rangal</a><br>
-        I made this page for whenever a person in the DEP discord server says something edgy, horny, controversial, etc. Meant to be lighthearted and Rangal knows it's a joke. We all good.
-        </div>
-      </div>-->
-      <div class="text-box flex-container unselectable">
-        <div>
-        <a href=../tests/horse>The Horse Button™</a><br>
-        The Horse Button™ takes you to a random registered .horse domain. THE LIST IS NOT FILTERED FOR DANGEROUS CONTENT. CLICK AT YOUR OWN RISK.<br>Originally made in about an hour.
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-        <a href=sitelist>Site List</a><br>
-        ...it is literally this page.
-        </div>
-      </div>
-    </div>
-    <script src="/js/scrollparallax.js" type=text/javascript></script>
+    <article who="spax" emotion="smirk">
+      Yo! It's me, Spax!<br>
+      This is my full site list.
+    </article>
+    <article who="spax" emotion="look">
+      I'll try to keep this page as up-to-date as possible... but don't expect me to be perfect.
+    </article>
+    <article who="spax" emotion="smirk">
+      (2024 Update: I removed a lot of the links to certain pages here for being severely out of date)
+    </article>
+    <article who="spax" emotion="blush">
+      I hope you enjoy my webpages!
+    </article>
+    <br>
+    <article>
+      <a href=main>Main Page</a><br>
+      The main page to the website. Right now it's a test placeholder but I'll put useful stuff on here eventually.
+    </article>
+    <!-- commenting since it is severely outdated
+    <article>
+      <a href=fanart>Character Art!</a><br>
+      This is where I post all art of my characters! Please check out the cool artists who made them!<br>Sidenote: this page needs to get overhauled. It is severely out of date.
+    </article>
+  -->
+    <article>
+      <a href=nahua-ref-sheet>Nahua Ref Sheet</a><br>
+      The ref sheet of Nahua! Since I don't have an official ref sheet yet, I've picked a few of the most up-to-date pieces of her to display here.
+    </article>
+    <article>
+      <a href=isspaxatschool>Is Spax At School?</a><br>
+      This page uses JavaScript to see my schedule and update the text box to state whether I'm currently at school or not. Finally works!
+    </article>
+    <!--
+    <article>
+      <a href=changelog>Changelog</a><br>
+      The manually edited changelog for the site. Currently being updated every day I make major changes on the site so that I don't regret not documenting it in the future. (I really need to update this.)
+    </article>
+    -->
+    <article>
+      <a href=alldepfaces>All DEP Character Faces</a><br>
+      All Dweller's Empty Path faces that are supported on this site! Excluding custom ones.
+    </article>
+    <article>
+      <a href=allspaxfaces>All Spax Faces</a><br>
+      When originally making this site and testing the text box functionality, I went a little too far with a gag and ended up making 14 sprites for my axolotl character. I only ended up using two of them but in this site, you can see all the expressions I made for them! (I spent like two hours on them) <s>(dm me on discord if you wanna redo them for me)</s><br>
+      2024 update: these are being redone by <a href="https://ko-fi.com/ouchyzapgun">ouchyzapgun</a>!
+    </article>
+    <!--
+    <article>
+      <a href=plannedchanges>Planned Changes</a><br>
+      Here I'll try to do weekly updates stating what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. (I really need to update this too.)
+    </article>
+    <article>
+      <a href=MojoArrowAdvice>Mojo's Arrow Advice</a><br>
+      This is my Create project that I made for my AP Computer Science Principles class! This program is not endorsed by BrotherMojo at all by the way. 
+    </article>
+    -->
+    <article>
+      <a href=../tests/horse>The Horse Button™</a><br>
+      The Horse Button™ takes you to a random registered .horse domain.<br>
+      THE LIST IS NOT FILTERED FOR DANGEROUS CONTENT. CLICK AT YOUR OWN RISK.<br>
+      Originally made in about an hour.
+    </article>
+    <article>
+      <a href=sitelist>Site List</a><br>
+      This page right here! Déjà vu much?
+    </article>
   </body>
 </html>
