--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
     <meta property="og:title" content="spax.zone">
-    <meta property="og:description" content="webbed site">
+    <meta property="og:description" content="a webbed site for a webbed creachure">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <script src="../js/bootstrap.min.js"></script>
-    <!---->
-    <link rel="stylesheet" href="css/styles.css" type=text/css>
+    <link rel="stylesheet" href="css/experimental.css" type=text/css>
     <link rel="canonical" href="https://spax.zone/index"/>
     <meta http-equiv="Refresh" content="0; url='html/main'"/>
     <title>Redirect Go brrrrr</title>
   </head>
   <body>
+    <article who="claire" emotion="neutral">
+      Redircting nerds...
+    </article>
   </body>
 </html>
