--- a/tests/horse.html
+++ b/tests/horse.html
@@ -2,15 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <title>The Horse Button™</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#c1694f">
+  <meta name="description" content="Press it if you dare">
   <meta property="og:title" content="The Horse Button™">
   <meta property="og:description" content="Press it if you dare">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://spax.zone/images/misc/horse.png" type="image/png">
   <link rel="icon" href="/images/misc/horse.png">
-  <title>The Horse Button™</title>
   <style>
     @font-face {
       font-family: Twemoji;
