remove random span

--- a/html/main2.html
+++ b/html/main2.html
@@ -33,7 +33,7 @@
             <img src="
           /images/faces/claire/Neutral.png
             "></img>
-          <span>Hey</span> nerds. It's me, Claire.
+          Hey nerds. It's me, Claire.
         </div>
       </div>
       <div class="text-box flex-container unselectable">
